fix broken layout for new-tag-button

--- a/app/assets/stylesheets/lessons.scss
+++ b/app/assets/stylesheets/lessons.scss
@@ -6,3 +6,7 @@
   color: red;
   display: none;
 }
+
+#new-tag-button {
+  text-decoration: none;
+}
